--- a/app/src/main/res/layout/fragment_monkey.xml
+++ b/app/src/main/res/layout/fragment_monkey.xml
@@ -8,4 +8,17 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     />
+    <com.android.volley.toolbox.NetworkImageView
+        android:id="@+id/network_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+
+        />
+    <ImageView
+        android:id="@+id/imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        />
 </LinearLayout>
